[RPP] Shorten URLs that appear in RenderBlocking, FontDisplay insights
`eventRef` now shortens URLs to use as its text. Also, FontDisplay now
uses `eventRef`.

Bug: 368170718, 372267639
Change-Id: Iafb9fa70ef153f604a0d5550c7ade23d5dbbfd0b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5907914
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -136,6 +136,7 @@ dd.dl-title {
   font: var(--sys-typescale-body4-regular);
   display: flex;
   flex-direction: column;
+  word-break: break-all;
 
   .element-img-details-size {
     color: var(--color-text-secondary);
