[M131] Style prefetch network request failures differently
The default styling made it seemed like a prefetch failure affects
content displayed by the current page (which isn't the case). Updated
to change the color to yellow (to mirror warnings in the console) and
use a warning icon.

Change-Id: Ib1ac103694b4a21f7b52e1825ea51b0796663a1a
Bug: 372055494
Before: https://imgur.com/a/JnpyrlE
After: https://imgur.com/a/gGF8Win
Demo: https://adithyas-serve.glitch.me/start-failed-prefetch.html (have network panel open when navigating to this URL)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5908212
Commit-Queue: Adithya Srinivasan <adithyas@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
(cherry picked from commit 160e49211ebcd5b1602b377d2fca62470666d781)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5939826
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -155,14 +155,35 @@
   color: var(--sys-color-error) !important;
 }
 
+.network-warning-row,
+.network-warning-row .network-cell-subtitle {
+  color: var(--sys-color-yellow);
+}
+
 .network-log-grid.data-grid tr.selected.network-error-row,
 .network-log-grid.data-grid tr.selected.network-error-row .network-cell-subtitle,
-.network-log-grid.data-grid tr.selected.network-error-row .network-dim-cell,
-.network-log-grid.data-grid:focus-within tr.selected.network-error-row .devtools-link,
+.network-log-grid.data-grid tr.selected.network-error-row .network-dim-cell {
+  color: var(--sys-color-error);
+}
+
+.network-log-grid.data-grid tr.selected.network-warning-row,
+.network-log-grid.data-grid tr.selected.network-warning-row .network-cell-subtitle,
+.network-log-grid.data-grid tr.selected.network-warning-row .network-dim-cell {
+  color: var(--sys-color-yellow);
+}
+
 .network-log-grid.data-grid:focus-within tr.selected.network-error-row,
+.network-log-grid.data-grid:focus-within tr.selected.network-error-row .devtools-link,
 .network-log-grid.data-grid:focus-within tr.selected.network-error-row .network-cell-subtitle,
 .network-log-grid.data-grid:focus-within tr.selected.network-error-row .network-dim-cell {
   color: var(--sys-color-error);
+}
+
+.network-log-grid.data-grid:focus-within tr.selected.network-warning-row,
+.network-log-grid.data-grid:focus-within tr.selected.network-warning-row .devtools-link,
+.network-log-grid.data-grid:focus-within tr.selected.network-warning-row .network-cell-subtitle,
+.network-log-grid.data-grid:focus-within tr.selected.network-warning-row .network-dim-cell {
+  color: var(--sys-color-yellow);
 }
 
 .network-log-grid.data-grid tr.selected,
