[RPP] Make all timeline links buttons instead of spans
Also changes these intra-timeline links to be `.timeline-link`, since
`.devtools-link` is already in use elsewhere and so was confusing here.

Bug: 372092783
Change-Id: Ic8f40d3009630232ab0a106977f21d9f59779c5d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5922133
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/layoutShiftDetails.css
+++ b/front_end/panels/timeline/components/layoutShiftDetails.css
@@ -62,13 +62,20 @@
   }
 }
 
-.devtools-link {
+/** TODO: This is duplicated in sidebarInsights.css. Should make a component. */
+.timeline-link {
   cursor: pointer;
   text-decoration: underline;
   color: var(--sys-color-primary);
+  /* for a11y reasons this is a button, so we have to remove some default
+   * styling */
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
 }
 
-.devtools-link.invalid-link {
+.timeline-link.invalid-link {
   color: var(--sys-color-state-disabled);
 }
 
