--- a/front_end/panels/timeline/components/networkRequestDetails.css
+++ b/front_end/panels/timeline/components/networkRequestDetails.css
@@ -53,7 +53,8 @@
   padding: 0 3px;
 }
 
-.devtools-link {
+.devtools-link,
+.timeline-link {
   color: var(--text-link);
   text-decoration: underline;
   outline-offset: 2px;
