--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -170,7 +170,7 @@ ul.insight-icon-results {
   }
 }
 
-.devtools-link {
+.timeline-link {
   cursor: pointer;
   text-decoration: underline;
   color: var(--sys-color-primary);
@@ -179,9 +179,10 @@ ul.insight-icon-results {
   background: none;
   border: none;
   padding: 0;
+  font: inherit;
 }
 
-.devtools-link.invalid-link {
+.timeline-link.invalid-link {
   color: var(--sys-color-state-disabled);
 }
 
