[RPP] Use 32px bounding box for LCP image
Also adds border and margin.

https://i.imgur.com/GrTyNdW.png

Bug: 372266880
Change-Id: I3095cd0f33cbe47ad52d92825a2224b7302255c9
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5917567
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -127,9 +127,12 @@ dd.dl-title {
 }
 
 .element-img {
-  max-width: 20%;
-  max-height: 20%;
-  padding-inline: var(--sys-size-3);
+  width: var(--sys-size-13);
+  height: var(--sys-size-13);
+  object-fit: cover;
+  border: var(--sys-size-1) solid var(--sys-color-divider);
+  background: var(--sys-color-divider) -0.054px -12px / 100.239% 148.936% no-repeat;
+  margin-right: var(--sys-size-5);
 }
 
 .element-img-details {
