[RPP] Adjust spacing in insights to match mocks
Also changes metric order to match PSI, which is LCP INP CLS.

Bug: 372266302
Change-Id: I907d9a710f7ef11cfcc8e366ebed243676b83c8a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5922146
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -36,6 +36,12 @@
       font: var(--sys-typescale-body4-medium);
     }
   }
+
+  &:not(.closed) {
+    header {
+      padding-bottom: var(--sys-size-2);
+    }
+  }
 }
 
 .insight-hover-icon {
@@ -78,7 +84,7 @@
 }
 
 .insight-section {
-  padding: var(--sys-size-5) 0;
+  padding-top: var(--sys-size-5);
 }
 
 .insight-description:not(:empty) {
