--- a/front_end/panels/timeline/components/sidebarSingleInsightSet.css
+++ b/front_end/panels/timeline/components/sidebarSingleInsightSet.css
@@ -28,7 +28,7 @@
 }
 
 .metric-value {
-  font-size: 20px;
+  font-size: var(--sys-size-11);
 }
 
 .metric-value-bad {
@@ -48,6 +48,5 @@
 }
 
 .metric-label {
-  font-size: 12px;
-  font-weight: bold;
+  font: var(--sys-typescale-body4-medium);
 }
