[RPP] Render metric unit in smaller font in locale-aware way
en: https://i.imgur.com/yCLrf6s.png
sw: https://i.imgur.com/xlNRemf.png

Note: I inspected how the existing `time-utilities.ts` strings have been
translated, and found some incorrectly long-form units used where a
short version is expected. For example, in `sw` what should have been
"ms" (or some other appropriate abbreviation) is instead fully spelled
out as "Milisekunde". Intl and other research suggests that "ms" would
have been more appropriate for Swahili. Since space matters for these
strings, I added directions for translators to prefer the short form
when available.

Bug: 372265319
Change-Id: I7a022df66b9145ecdd1ea317fa5d30e94dabb48b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5922715
Reviewed-by: Paul Irish <paulirish@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/sidebarSingleInsightSet.css
+++ b/front_end/panels/timeline/components/sidebarSingleInsightSet.css
@@ -50,3 +50,12 @@
 .metric-label {
   font: var(--sys-typescale-body4-medium);
 }
+
+.number-with-unit {
+  white-space: nowrap;
+
+  .unit {
+    font-size: 14px;
+    padding: 0 1px;
+  }
+}
