--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -175,6 +175,7 @@
   position: relative;
   background-color: var(--sys-color-cdt-base-container);
   user-select: text;
+  display: block;
 }
 
 .timeline-details-view-block {
