[RPP Observations] Add button to highlight CLS cluster
https://screenshot.googleplex.com/5jvLHVgQSsqdaRj

Bug: 369100729
Change-Id: Iab28d10979c1ced333c5d6f56ee98d1d0a47803d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5924382
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -162,7 +162,7 @@
   border-bottom: 1px solid var(--sys-color-divider);
 
   &.highlight {
-    animation: interaction-highlight-fadeout 2s;
+    animation: highlight-fadeout 2s;
   }
 }
 
@@ -299,7 +299,7 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   padding-left: 20px;
 }
 
-.link-to-interaction {
+.link-to-log {
   padding: unset;
   background: unset;
   border: unset;
@@ -309,7 +309,7 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   cursor: pointer;
 }
 
-@keyframes interaction-highlight-fadeout {
+@keyframes highlight-fadeout {
   from {
     background-color: var(--sys-color-yellow-container);
   }
