[RPP] Remove divider for viewport insight when empty
Bug:372687420
Change-Id: I8ee991560f512376fd77115962c1543d643ffa3b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5922348
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -91,9 +91,8 @@
   padding-bottom: var(--sys-size-5);
 }
 
-.insight-description:not(:empty),
-.insight-section:not(:last-child) {
-  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+.insight-section:not(:empty) {
+  border-top: var(--sys-size-1) solid var(--sys-color-divider);
 }
 
 .insight-title {
