[Freestyler] Render disabled view when AIDA is not available
Motivation:
* We want to highlight all the conditions why the feature is not available in a proper place instead of showing them as placeholder in the text input.

For this, the CL:
* Renames `opt-in` view to be `disabled-view`
* Renders non-available AIDA availability conditions inside `disabled-view` too with the text previously rendered as a placeholder for the disabled text area. This will make the placeholder text decorative and will allow us to mark the text area inoperable for those cases.

Drive-by:
* Adds `text-wrap: pretty` to `disabled-view` so that its contents don't have an orphan word.

Fixed: 372325111
Change-Id: Ic267f18af792cb2da043e421086d89f479e8c08e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5924354
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -493,7 +493,7 @@ main {
   }
 }
 
-.opt-in {
+.disabled-view {
   border-radius: var(--sys-shape-corner-small);
   padding: var(--sys-size-6) var(--sys-size-8);
   box-shadow: var(--drop-shadow);
@@ -501,8 +501,9 @@ main {
   margin: var(--sys-size-8);
   max-width: var(--sys-size-34);
   display: flex;
+  text-wrap: pretty;
 
-  .opt-in-icon-container {
+  .disabled-view-icon-container {
     border-radius: var(--sys-shape-corner-extra-small);
     width: var(--sys-size-9);
     height: var(--sys-size-9);
