[DrJones] Update how icon and clickable resource is set for various entrypoints
- [File Entrypoint] Make the div clickable

- [Performance Entrypoint] For now, remove pointer cursor for selected task as it is not clickable

- [Network Entrypoint] For requests with overriden headers, icon should be set accordingly (https://screenshot.googleplex.com/9wp9yhCE7neuW7d)

Bug: 371947238, 366409433
Change-Id: I2839d4d8e4dedea5b96cdeaf1ba59683549673ba
Fixed: 366409433
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5921056
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Auto-Submit: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -229,6 +229,11 @@
   width: 100%;
 
   .resource-link {
+    cursor: pointer;
+  }
+
+  .resource-link,
+  .resource-task {
     padding: var(--sys-size-2) var(--sys-size-4);
     font: var(--sys-typescale-body4-size);
     border: var(--sys-size-1) solid var(--sys-color-divider);
@@ -237,7 +242,6 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     max-width: var(--sys-size-32);
-    cursor: pointer;
 
     .icon {
       display: inline-flex;
@@ -245,6 +249,30 @@
       margin-right: var(--sys-size-3);
       width: var(--sys-size-9);
       height: var(--sys-size-9);
+    }
+
+    /*
+      CSS styling for `network-override-marker` is similar to
+      https://source.chromium.org/chromium/chromium/src/+/main:third_party/devtools-frontend/src/front_end/panels/network/networkLogView.css;l=379.
+      There is a difference in `left` and `top` values to make sure
+      it is placed correctly for the network icon in assistance panel.
+    */
+    .network-override-marker {
+      position: relative;
+      float: left;
+    }
+
+    .network-override-marker::before {
+      content: var(--image-file-empty);
+      width: var(--sys-size-4);
+      height: var(--sys-size-4);
+      border-radius: 50%;
+      outline: var(--sys-size-1) solid var(--icon-gap-focus-selected);
+      left: 11px;
+      position: absolute;
+      top: 13px;
+      z-index: 1;
+      background-color: var(--sys-color-purple-bright);
     }
 
     .image.icon {
@@ -260,7 +288,8 @@
     }
   }
 
-  .resource-link.not-selected {
+  .resource-link.not-selected,
+  .resource-task.not-selected {
     color: var(--sys-color-state-disabled);
     border-color: var(--sys-color-neutral-outline);
   }
