--- a/front_end/panels/timeline/overlays/components/entriesLinkOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entriesLinkOverlay.css
@@ -24,6 +24,14 @@
   &.cut-off-bottom {
     border-bottom: none;
   }
+
+  &.cut-off-right {
+    border-right: none;
+  }
+
+  &.cut-off-left {
+    border-left: none;
+  }
 }
 
 .entry-is-not-source {
