--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -35,4 +35,20 @@
 .entry-highlight-wrapper {
   box-sizing: border-box;
   border: 2px solid var(--sys-color-on-surface);
+
+  &.cut-off-top {
+    border-top: none;
+  }
+
+  &.cut-off-bottom {
+    border-bottom: none;
+  }
+
+  &.cut-off-right {
+    border-right: none;
+  }
+
+  &.cut-off-left {
+    border-left: none;
+  }
 }
