Create component for icons for file sources. Add function in panels utils for creating such icons given UISourceCode and classNames.
- [DrJones] [FileEntrypoint] Use it in AI Assistance panel for selected task

Pending: Use it in sources panel

Bug: 371947238
Change-Id: Ie3952df3dc4e25854a012c12c4ecf29ca66c80c8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5920285
Auto-Submit: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -243,7 +243,8 @@
     white-space: nowrap;
     max-width: var(--sys-size-32);
 
-    .icon {
+    .icon,
+    devtools-file-source-icon {
       display: inline-flex;
       vertical-align: top;
       margin-right: var(--sys-size-3);
