Fix tab focus for Show more buttons in Memory > heap snapshot
Screenshot: https://imgur.com/a/MQ2tfLM

Fixed: 370641629
Change-Id: I279c3411e1ebc72faca511d1aee8d25883885d9e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5928966
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/legacy/components/data_grid/dataGrid.css
+++ b/front_end/ui/legacy/components/data_grid/dataGrid.css
@@ -86,6 +86,10 @@
 .data-grid tbody tr {
   display: none;
   height: 20px;
+
+  &:has(td.show-more) {
+    height: var(--sys-size-13);
+  }
 }
 
 .data-grid tbody tr.revealed {
@@ -291,10 +295,13 @@
 
 .data-grid td.show-more {
   white-space: normal;
-  gap: 4px;
+  gap: var(--sys-size-3);
 
   devtools-button {
     margin-right: var(--sys-size-6);
+    position: relative;
+    margin-top: 3px;
+    margin-bottom: 3px;
   }
 }
 
