Add hover button for drjones file entrypoint
Bug: 372154092
Change-Id: I6aadf578c6e327b13a2a97c6e25f4276a0cada8a
Fixed: 372154092
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5932948
Auto-Submit: Samiya Caur <samiyac@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/sources/navigatorTree.css
+++ b/front_end/panels/sources/navigatorTree.css
@@ -61,6 +61,17 @@
   color: var(--icon-file-script);
 }
 
+.navigator-file-tree-item .ai-button-container {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  right: var(--sys-size-3);
+}
+
+.navigator-file-tree-item:hover .ai-button-container {
+  display: inline-flex;
+}
+
 .navigator-file-tree-item devtools-icon.dot::before {
   width: 7px;
   height: 7px;
