[Freestyler] Remove border outline when disabled
We need to keep the border to make the textarea not change size.

Fixed: 372633018
Change-Id: I0b9c4436b6803f1254528d48126dea1833e13cba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5934351
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -76,6 +76,7 @@
   &:disabled {
     color: var(--sys-color-state-disabled);
     background-color: var(--sys-color-state-disabled-container);
+    border-color: transparent;
   }
 }
 
