[Freestyler] Make padding on disable better on small screens
The margin does not have effect on the normal layout,
but on small screen it makes the the scroll appear earlier.
Keep it rather then removing as it makes it look better.

Bug: none
Change-Id: I3c0db73a6f5d35f9d9adf9687ac329113adaa4ff
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5937920
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -529,7 +529,7 @@ main {
   padding: var(--sys-size-6) var(--sys-size-8);
   box-shadow: var(--drop-shadow);
   font: var(--sys-typescale-body4-regular);
-  margin: var(--sys-size-8);
+  margin: var(--sys-size-4) 0;
   max-width: var(--sys-size-34);
   display: flex;
   text-wrap: pretty;
