[RPP]: Add focus button for multi navigation traces
This adds a button to the navigations that when clicked, adjusts the
tracebounds of the given navigation.

http://screencast/cast/NTUzMTI0OTkyMDcwNDUxMnw4MDdjZjAyYy0xMQ

Bug:372858594
Change-Id: I7562a95342a558151b772c697a125ccb96d63f40
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5936136
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/sidebarInsightsTab.css
+++ b/front_end/panels/timeline/components/sidebarInsightsTab.css
@@ -32,6 +32,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font: var(--sys-typescale-body4-medium);
+    display: flex;
+    align-items: center;
 
     &:focus {
       background-color: var(--sys-color-tonal-container);
@@ -47,6 +49,24 @@
     details:first-child & {
       border-top: 1px solid var(--sys-color-divider);
     }
+    }
+  }
+
+.zoom-button {
+  margin-left: auto;
+}
+
+.zoom-icon {
+  visibility: hidden;
+
+  &.active devtools-button {
+    visibility: visible;
+  }
+}
+
+.dropdown-icon {
+  &.active devtools-button {
+    transform: rotate(90deg);
   }
 }
 
