Revert "[RPP Observations] Add phases for each interaction"
This reverts commit a51d9f907b439d236bb53a9b4f6e6544c4637c9f.

Reason for revert: e2e test on mac consistently fails since this CL landed. First failure: https://ci.chromium.org/ui/p/devtools-frontend/builders/ci/Stand-alone%20Mac-arm64/4134/overview.

Original change's description:
> [RPP Observations] Add phases for each interaction
>
> - Interaction list items are expandable
> - Creates separate interaction if events happen in different frames
> - Interactions are restored from the buffer
> - `eventNames` property added to each interaction for future use
>
> Bug: 369097528, 365160880, 371052022
> Change-Id: Iab39cb300143aad3a6f2cc5ef5ecab79d7fd879e
> Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5933344
> Reviewed-by: Paul Irish <paulirish@chromium.org>
> Commit-Queue: Adam Raine <asraine@chromium.org>

Bug: 369097528, 365160880, 371052022
Change-Id: I7cd208c5e2620c682f9babaec573df4c0880cfb6
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5938363
Auto-Submit: Simon Zünd <szuend@chromium.org>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -167,33 +167,17 @@
 }
 
 .interaction {
-  --phase-table-margin: 120px;
-  --details-indicator-width: 18px;
-
-  summary {
-    display: flex;
-    align-items: center;
-    padding: 7px 0;
-
-    &::before {
-      content: " ";
-      height: 14px;
-      width: var(--details-indicator-width);
-      mask-image: var(--image-file-triangle-right);
-      background-color: var(--icon-default);
-      flex-shrink: 0;
-    }
-  }
-
-  details[open] summary::before {
-    mask-image: var(--image-file-triangle-down);
-  }
+  display: flex;
+  align-items: center;
+  padding: 7px 0;
 }
 
 .interaction-type {
   font-weight: var(--ref-typeface-weight-medium);
-  width: calc(var(--phase-table-margin) - var(--details-indicator-width));
+  width: 80px;
   flex-shrink: 0;
+  margin-right: 12px;
+  white-space: nowrap;
 }
 
 .interaction-inp-chip {
@@ -333,20 +317,4 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   to {
     background-color: transparent;
   }
-}
-
-.phase-table {
-  border-top: 1px solid var(--sys-color-divider);
-  padding: 7px 0;
-  margin-left: var(--phase-table-margin);
-}
-
-.phase-table-row {
-  display: flex;
-  justify-content: space-between;
-}
-
-.phase-table-header-row {
-  font-weight: var(--ref-typeface-weight-medium);
-  margin-bottom: 4px;
 }
