add hover for drjones network entrypoint
Bug: 372154246
Change-Id: I63a7be1f1419be7321e0d52fba1caf905c5b5038
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5933508
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Auto-Submit: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -259,6 +259,15 @@
   vertical-align: sub;
 }
 
+.data-grid-data-grid-node .ai-button-container {
+  display: none;
+  float: right;
+}
+
+.data-grid-data-grid-node:hover .ai-button-container {
+  display: inline-flex;
+}
+
 .image-network-icon-preview {
   bottom: 0;
   left: 0;
