[Freestyler] Add default state to panel, when no agent is selected
When opening the panel directly, without going through a agent-
specific entry point, show a default state which explains the existing
entry points.

Screenshot: https://i.imgur.com/U1mPqtr.png

Bug: http://b/353441061
Change-Id: I99a3b2aec913d518c9b3e63110153ab4bd7cc941
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5899923
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -297,6 +297,35 @@
   }
 }
 
+.no-agent-message {
+  user-select: text;
+  cursor: initial;
+  display: flex;
+  flex-direction: column;
+  gap: var(--sys-size-5);
+  width: 100%;
+  padding: var(--sys-size-7) var(--sys-size-5);
+  height: 100%;
+
+  .header {
+    display: flex;
+    align-items: center;
+    height: var(--sys-size-11);
+    gap: var(--sys-size-4);
+
+    h2 {
+      font: var(--sys-typescale-body4-bold);
+    }
+  }
+
+  .instructions {
+    display: flex;
+    flex-direction: column;
+    gap: var(--sys-size-6);
+    line-height: 18px;
+  }
+}
+
 .indicator {
   color: var(--sys-color-green-bright);
 }
