Add privacy section to security sidebar
When the devtools-privacy-ui flag is enabled, a privacy section will
be added to the security panel's sidebar. The button does not do 
anything yet. It will reveal a cookie report in the main view after
this cl: https://crrev.com/c/5937413

https://screenshot.googleplex.com/AsqUXpJCh8VhaCH.png

Bug: 365737493
Change-Id: I5b178b4da190fe6a9fb98836affcea3477ccec3b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5928927
Commit-Queue: Joshua Thomas <masnoble@chromium.org>
Reviewed-by: Shuran Huang <shuuran@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/security/sidebar.css
+++ b/front_end/panels/security/sidebar.css
@@ -16,6 +16,10 @@
   &::before {
     display: none;
   }
+
+  &:not(:first-child) {
+    margin-top: var(--sys-size-6);
+  }
 }
 
 .security-main-view-reload-message {
@@ -38,7 +42,11 @@
 
 .security-main-view-reload-message,
 .tree-outline li.security-sidebar-origins,
-.tree-outline li.security-group-list-item {
+.tree-outline li.security-group-list-item,
+.tree-outline span  {
+
+  font: var(--sys-typescale-body4-medium);
+
   &:hover:not(:has(span[is="dt-checkbox"])) .selection {
     background: transparent;
   }
