[RPP Observations] Remove collapsible container for env recs
https://screenshot.googleplex.com/ACPKBbu5GhDdTK2

Bug: None
Change-Id: Ib44671217c74f8beb76a7565843ae029dcbb0701
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5941208
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -301,18 +301,18 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   width: 18px;
 }
 
-.environment-recs {
-  margin: 12px 0;
-}
-
-.environment-recs > summary {
+.environment-recs-title {
+  margin-top: 12px;
   font-weight: var(--ref-typeface-weight-medium);
-  margin-bottom: 4px;
 }
 
 .environment-recs-list {
   margin: 0;
   padding-left: 20px;
+}
+
+.environment-rec {
+  font-weight: var(--ref-typeface-weight-medium);
 }
 
 .link-to-log {
