RPP: Refactor network request details & tooltip
We consolidate the implementation of the timing table and priority. This DRYs things up and resolves inconsistencies (missing i18n in tooltip, use of "initialPriority -> priority", etc).

The tooltip gains a resource category color chip, which replaces the network legend.

The details layout is updated to match UX mocks, giving the URL full width, rebalancing columns.

Change-Id: I2fb124080dbf1b5822bd03ebfc6620fbdc2e2a71
Bug: 355123037,373455453,313903853,368152887
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5927577
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/networkRequestDetails.css
+++ b/front_end/panels/timeline/components/networkRequestDetails.css
@@ -18,13 +18,16 @@
   border: 1px solid var(--sys-color-divider);
   display: inline-block;
   margin-right: 4px;
-  content: " ";
 }
 
-.network-request-details-body {
+.network-request-details-cols {
   display: flex;
-  padding-bottom: 5px;
+}
+
+:host {
   border-bottom: 1px solid var(--sys-color-divider);
+  display: block;
+  padding-bottom: 5px;
 }
 
 .network-request-details-col {
@@ -32,7 +35,6 @@
 }
 
 .network-request-details-row {
-  display: flex;
   padding: 0 10px;
   min-height: 20px;
 }
@@ -59,6 +61,7 @@
   text-decoration: underline;
   outline-offset: 2px;
   padding: 0;
+  text-align: left;
 
   .elements-disclosure & {
     color: var(--text-link);
@@ -107,49 +110,6 @@
   font: inherit;
 }
 
-.timings-row {
-  align-self: start;
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.indicator {
-  display: inline-block;
-  width: 10px;
-  height: 4px;
-  margin-right: 5px;
-  border: 1px solid var(--sys-color-on-surface-subtle);
-}
-
-.whisker-left {
-  align-self: center;
-  display: inline-flex;
-  width: 10px;
-  height: 6px;
-  margin-right: 5px;
-  border-left: 1px solid var(--sys-color-on-surface-subtle);
-}
-
-.whisker-right {
-  align-self: center;
-  display: inline-flex;
-  width: 10px;
-  height: 6px;
-  margin-right: 5px;
-  border-right: 1px solid var(--sys-color-on-surface-subtle);
-}
-
-.horizontal {
-  background-color: var(--sys-color-on-surface-subtle);
-  height: 1px;
-  width: 10px;
-  align-self: center;
-}
-
-.time {
-  display: inline-block;
-  padding-left: 10px;
-  /* Push the time to right. */
-  margin-left: auto;
+.timing-rows {
+  width: fit-content;
 }
