[GM3Restyling] Update Framework ignore listing settings page
Drive-by: Update padding in cards component

Before: https://i.imgur.com/aP6glij.png
After: https://i.imgur.com/r6csaJ5.png
Bug: 368238837
Change-Id: I16833b9a1fbc331cc8514ee37dbbe63a8c205baf
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5945585
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
+++ b/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
@@ -4,39 +4,14 @@
  * found in the LICENSE file.
  */
 
-:host {
-  overflow: hidden;
-}
-
-.header {
-  padding: 0 0 6px;
-  border-bottom: 1px solid var(--sys-color-divider);
-  font-size: 18px;
-  font-weight: normal;
-  flex: none;
-}
-
-.intro {
-  margin-top: 10px;
-}
-
 .ignore-list-option {
   flex: none;
-  padding: 3px 6px;
-  min-height: 30px;
 }
 
 .ignore-list-option devtools-button {
   position: relative;
   top: var(--sys-size-2);
   margin-left: var(--sys-size-2);
-}
-
-.ignore-list-option-group {
-  margin-top: 13px;
-  margin-bottom: 3px;
-  margin-left: 8px;
-  flex-shrink: 0;
 }
 
 .add-button {
@@ -46,15 +21,7 @@
 }
 
 .ignore-list {
-  max-width: 500px;
   flex: 0 1 auto;
-}
-
-.ignore-list-global-enable {
-  padding: 3px 0;
-  color: var(--sys-color-token-subtle);
-  font-size: 120%;
-  margin-top: 17px;
 }
 
 .ignore-list-item {
@@ -68,7 +35,6 @@
 
 .ignore-list-pattern {
   flex: auto;
-  min-width: 100px;
 }
 
 .ignore-list-item > [is="dt-checkbox"] {
@@ -97,13 +63,7 @@
   text-align: inherit;
 }
 
-.ignore-list-options {
-  margin-left: 22px;
-  display: flex;
-  flex-direction: column;
-}
-
-.ignore-list-options.ignore-listing-disabled {
+.ignore-listing-disabled .ignore-list-options {
   opacity: 30%;
 }
 
